# TEKUUM-D3

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.Android.mk  README.md  README.txt  android-build-clean.bat  android-build-debug.bat  android-build-release.bat  astyle-code.bat  astyle-code.sh  astyle-options.ini  cmake-linux-legacy-debug.sh  cmake-linux-legacy-release.sh  cmake-linux-standalone-debug.sh  cmake-linux-standalone-profile.sh  cmake-linux-standalone-release.sh  cmake-linux-standalone-retail.sh  cmake-linux.sh  cmake-vs2010-32bit-legacy.bat  cmake-vs2010-32bit-qtstudio.bat  cmake-vs2010-32bit-use_mfc_tools.bat  cmake-vs2010-32bit-use_qt_tools.bat  cmake-vs2010-32bit.bat  cmake-vs2012-32bit-angle.bat  cmake-vs2012-32bit-gles1.bat  cmake-vs2012-32bit-gles2.bat  cmake-vs2012-32bit-legacy.bat  cmake-vs2012-32bit-mfc_tools-legacy.bat  cmake-vs2012-32bit-mfc_tools.bat  cmake-vs2012-32bit-qt_studio.bat  cmake-vs2012-32bit-qt_tools.bat  cmake-vs2012-32bit.bat  cmake-vs2012-64bit.bat  cmake-vs2013-32bit-legacy.bat  cmake-vs2013-32bit-mfc_tools-legacy.bat  cmake-vs2013-32bit-mfc_tools.bat  cmake-vs2013-32bit-qt_tools.bat  cmake-vs2013-32bit.bat  cmake-vs2013-64bit-legacy.bat  (+23 more)
MayaImport/: exporter.h  maya_main.cpp
TypeInfo/: TypeInfoGen.cpp  TypeInfoGen.h  main.cpp  premake4.lua
aas/: AASFile.cpp  AASFile.h  AASFileManager.cpp  AASFile_local.h  AASFile_optimize.cpp  AASFile_sample.cpp
android/: .cproject  .project  AndroidManifest.xml  adb-pull-gmon.bat  ant-update-project.bat  ant-update-project.sh  javah_export-engine-interfaces.bat  ndk-build-clean.bat  ndk-build-debug.bat  ndk-build-default.bat  ndk-build-release.bat
cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
cmake/: FindATL.cmake  FindDirectX.cmake  FindMFC.cmake  FindPulseAudio.cmake
framework/: BuildDefines.h  BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Common_mapconvert.cpp  Compressor.cpp  Compressor.h  Console.cpp  Console.h  DeclAF.cpp  DeclAF.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclPDA.h  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclSkin.h  DeclTable.cpp  DeclTable.h  DemoFile.cpp  DemoFile.h  EditField.cpp  EditField.h  EventLoop.cpp  EventLoop.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  KeyInput.cpp  (+12 more)
game/: AF.cpp  AF.h  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  EndLevel.cpp  EndLevel.h  Entity.cpp  Entity.h  Fx.cpp  Fx.h  Game.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  Grabber.h  IK.cpp  IK.h  Item.cpp  Item.h  Light.cpp  Light.h  Makefile.Android.mk  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  (+26 more)
idlib/: Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CMakeLists.txt  Callback.h  CmdArgs.cpp  CmdArgs.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  Makefile.Android.mk  MapFile.cpp  MapFile.h  ParallelJobList.cpp  ParallelJobList.h  Parser.cpp  Parser.h  SoftwareCache.cpp  SoftwareCache.h  Str.cpp  Str.h  StrStatic.h  Swap.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Token.cpp  Token.h  precompiled.h  premake4.lua
idlib/bv/: Bounds.cpp  Bounds.h  Box.cpp  Box.h  Frustum.cpp  Frustum.h  Frustum_gcc.cpp  Sphere.cpp  Sphere.h
idlib/containers/: BTree.h  HashIndex.cpp  HashIndex.h  HashTable.h  Hierarchy.h  LinkList.h  List.h  PlaneSet.h  Queue.h  Stack.h  StaticList.h  StrList.h  StrPool.h  VectorSet.h
idlib/geometry/: DrawVert.cpp  DrawVert.h  DrawVert_intrinsics.h  JointTransform.cpp  JointTransform.h  RenderMatrix.cpp  RenderMatrix.h  Surface.cpp  Surface.h  Surface_Patch.cpp  Surface_Patch.h  Surface_Polytope.cpp  Surface_Polytope.h  Surface_SweptSpline.cpp  Surface_SweptSpline.h  TraceModel.cpp  TraceModel.h  Winding.cpp  Winding.h  Winding2D.cpp  Winding2D.h
idlib/hashing/: CRC32.cpp  CRC32.h  MD4.cpp  MD4.h  MD5.cpp  MD5.h
idlib/math/: Angles.cpp  Angles.h  Complex.cpp  Complex.h  Curve.h  Extrapolate.h  Interpolate.h  Lcp.cpp  Lcp.h  MatX.cpp  MatX.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Ode.cpp  Ode.h  Plane.cpp  Plane.h  Pluecker.cpp  Pluecker.h  Polynomial.cpp  Polynomial.h  Quat.cpp  Quat.h  Random.h  Rotation.cpp  Rotation.h  Simd.cpp  Simd.h  Simd_3DNow.cpp  Simd_3DNow.h  Simd_AltiVec.cpp  Simd_AltiVec.h  Simd_Generic.cpp  Simd_Generic.h  Simd_MMX.cpp  Simd_MMX.h  Simd_SSE.cpp  Simd_SSE.h  (+8 more)
idlib/sys/: sys_assert.cpp  sys_defines.h  sys_includes.h  sys_intrinsics.h  sys_threading.h  sys_types.h
idlib/sys/posix/: posix_thread.cpp
libs/: CMakeLists.txt
libs/angle/: CMakeLists.txt
libs/angle/include/KHR/: khrplatform.h
libs/angle/samples/gles2_book/Common/: esUtil.vcxproj
libs/angle/samples/gles2_book/Hello_Triangle/: Hello_Triangle.vcxproj
libs/angle/samples/gles2_book/MultiTexture/: debug.txt
libs/angle/samples/translator/: essl_to_hlsl.vcxproj
libs/angle/src/compiler/: translator_common.vcxproj  translator_hlsl.vcxproj
libs/angle/src/compiler/preprocessor/: preprocessor.vcxproj
libs/angle/src/libEGL/: libEGL.cpp  libEGL.vcxproj  libEGL_main.cpp  main.h
libs/angle/src/libGLESv2/: Context.h  libGLESv2.cpp  libGLESv2.vcxproj  libGLESv2_main.cpp  main.h
premake/: embed.lua
premake4/: embed.lua
renderer/: BinaryImage.cpp  BinaryImage.h  BinaryImageData.h  BoundsTrack.cpp  BufferObject.cpp  BufferObject.h  Cinematic.cpp  Cinematic.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GLMatrix.cpp  GLMatrix.h  GLShader.cpp  GLShader.h  GLShader_strings.h  GraphicsAPIWrapper.h  GuiModel.cpp  GuiModel.h  Image.h  ImageManager.cpp  ImageOpts.h  Image_files.cpp  Image_init.cpp  Image_intrinsic.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Interaction.h  (+89 more)
(+734 files in other folders)
